--- a/static/css/styling.css
+++ b/static/css/styling.css
@@ -1,1 +1,60 @@
+/*css styling*/
 
+body{
+	background-image: url('#');
+	background-size: auto, cover;
+	background-position: center, center;
+	background-repeat: no-repeat;
+	background-color: rgba(55, 55, 55, 0.05);
+}
+
+input[type="text"], 
+input[type="password"], 
+input[type="email"], 
+input[type="tel"], 
+select, textarea {
+	background: rgba(255, 255, 255, 0.055);
+	border-radius: 5px;
+	border: solid 2px;
+	padding: 5px;
+	vertical-align: middle;
+
+}
+
+h1, h2, h3, h4, h5{
+	color: black;
+	font-family: Raleway, Helvetica, sans-serif
+	margin: 0 0 1em 0;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	font-weight: 700;
+	padding: 5px;
+}
+
+.login-bg{
+	background: rgba(255, 255, 255, 0.2);
+}
+
+.login-wrapper{
+	background: rgba(198, 182, 182, 0.2);
+	margin-right: auto;
+	margin-left: auto;
+	border-radius: 12px;
+	vertical-align: middle;
+}
+
+.search-wrapper{
+	width: 100%;
+	height: 100%;
+	background: rgba(255, 255, 255, 0.2);
+	margin-right: auto;
+	margin-left: auto;
+	border-radius: 10px;
+	vertical-align: middle;
+}
+.left{
+	float: left;
+}
+.right{
+	float: right;
+}
